--- a/html5/webapp/i18n/i18n.properties
+++ b/html5/webapp/i18n/i18n.properties
@@ -14,9 +14,42 @@ menuPrincipal=Main Menu
 #Empleados
 employees=Employee
 createEmployee=Create Employee
-searchEmployee=Search Employee
+searchEmployees=Search Employee
+employeeType=Employee Type
+employeeInfo=Employee Info
+employeeAdditionalInfo=Additional Info
+selectionEmployeeType=Select employee type to fill your data
+infoEmployeeForm=Complete the employee data to continue
+additionalInfo=Enter additional data, if not click the Verify button
+btnIntern=Intern
+btnAutonomous=Autonomous
+btnManager=Manager
+btnCancelEmployee=Cancel
+
+review=Review
+type=Type
+resume=Resume
+edit=Edit
+
+#additional info
+comments=Comments
+documents=Documents
+
+
+#FragmentEmployee
+name=Name
+lastName=Last Name
+DNI=DNI
+CIF=CIF
+salary=Anual salary
+price=Daily Price
+date=Date 
 
 
 #Pedidos
 order=Orders
 firmarPedido=Firmar 
+
+
+#EmployeeView
+employeeDetail=Employee Detail
