--- a/html5/webapp/i18n/i18n_es_ES.properties
+++ b/html5/webapp/i18n/i18n_es_ES.properties
@@ -14,9 +14,42 @@ mainMenu=Menu Principal
 #Empleados
 employees=Empleados
 createEmployee=Crear Empleado
-searchEmployee=Ver Empleados
+searchEmployees=Ver Empleados
+employeeType=Tipo de empleado
+employeeInfo=Datos empleado
+employeeAdditionalInfo=Informacion adicional
+selectionEmployeeType=Seleccione el tipo de empleado para rellenar sus datos.
+infoEmployeeForm=Complete los datos obligatorios para poder continuar
+additionalInfo=Introduce datos complementarios, si no de al boton "Verificar"
+btnCancelEmployee=Cancelar
+btnIntern=Interno
+btnAutonomous=Autonomo
+btnManager=Gerente
+
+review=Revisar
+type=Tipo
+edit=Editar
+
+#additional info
+comments=Comentario
+documents=Documentos
+resume=Resumen
+
+#fragment Empleados
+name=Nombre
+lastName=Apellido
+DNI=DNI
+CIF=CIF
+salary=Salario Bruto Anual
+price=Precio Diario
+date=Fecha Incorporacion 
 
 
 #Pedidos
 orders=Pedidos
 signOrder=Firmar Pedido
+
+
+
+#EmployeeView
+employeeDetail=Detalle Empleado
